🐛[fix]: 팝업 css에 z-index 추가

--- a/src/components/reaction/EmojiPickerPopup/index.module.css
+++ b/src/components/reaction/EmojiPickerPopup/index.module.css
@@ -1,4 +1,5 @@
 .popup {
   position: fixed;
   border-radius: 22px;
+  z-index: 100;
 }
